# interactiveDashboard

./: README.md  pyproject.toml
dashboard/: Interactivedashboard.py
