[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["vikramsinghbhati <vikrambhati2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
poetry="1.2.0"
pandas="2.2.1"
streamlit="1.33.0"
plotly="5.20.0"
matplotlib="3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
